# niobium

./: .gitignore  .npmignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  RESEARCH.md  install.js  package.json  server.json
.github/workflows/: ci.yml  release.yml
app/: README.md  pubspec.yaml
app/lib/: main.dart
app/lib/models/: pill.dart
app/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/widgets/: confirmation_dialog.dart  dynamic_form.dart  page_view.dart  pills_view.dart
app/lib/widgets/field_widgets/: autocomplete_field.dart  color_picker_field.dart  date_field.dart  enum_field.dart  file_picker_field.dart  modal_search_field.dart  multi_select_field.dart  radio_group_field.dart  remote_enum_field.dart  slider_field.dart  text_field.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: mod.rs
app/test/: widget_test.dart
app/test/models/: pill_test.dart
app/test/widgets/: pills_view_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
crates/niobium-mcp/: Cargo.toml
crates/niobium-mcp/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  schema_store.rs  server.rs
crates/niobium-mcp/src/core/: event_bus.rs  events.rs  mod.rs  plugin.rs
crates/niobium-mcp/src/plugins/: hub_client.rs  mod.rs
crates/niobium-mcp/tests/: mcp_e2e.rs
crates/niobium-pipe/: Cargo.toml
crates/niobium-pipe/src/: event.rs  http.rs  lib.rs  parallel.rs  pipeline.rs  process.rs  redact.rs  registry.rs  secure_context.rs  stage.rs  template.rs  toast.rs  transform.rs
docs/: plan-hub-integration.md
scripts/: package.sh
