[package]
name = "niobium-mcp"
version = "0.1.1"
edition = "2024"
description = "Niobium MCP server — native GUI for CLI AI agents"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ricardo-hdrn/niobium"
homepage = "https://github.com/ricardo-hdrn/niobium"
keywords = ["mcp", "ai", "gui", "forms", "cli"]
categories = ["command-line-utilities", "gui"]

[lib]
name = "niobium_mcp"
path = "src/lib.rs"

[[bin]]
name = "niobium"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
niobium-pipe = { path = "../niobium-pipe" }

[dev-dependencies]
tempfile = "3"
